Tue Jan 28 18:29:03 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* config.h: Remove SIZEOF_INT and SIZEOF_LONG; no longer needed
	with lib/md5.c changes.

Wed Jan 15 23:56:12 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* watcom.mak (OS2_OBJECTS): Remove strippath.

	* Makefile.in (DISTFILES): Add os2inc.h and watcom.mak.

Thu Jan  2 13:30:56 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* filesubr.c, pwd.c, pwd.h, run.c, stripslash.c:
	Remove "675" paragraph;	see ../ChangeLog for rationale.

Wed Jan  1 22:50:31 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* options.h: Reword comment for TMPDIR_DFLT to make it clear that
	this isn't specific to the pserver server.

Wed Dec 18 10:51:38 1996  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* Makefile.in (CFLAGS): Specify -Gd- not -Gd+.  The documentation
	says this causes a static link, although it hasn't yet been
	verified whether this option is sufficient to make the binary work
	on a system without the compiler's DLL.

Fri Dec  6 11:00:49 1996  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* os2inc.h, watcom.mak: Add GPL notice.

1996-11-24  Ullrich von Bassewitz  <uz@wuschel.ibb.schwaben.com>

	Changes for Watcom C:
	* README: Describe watcom port.
	* config.h: Include stdio.h and errno.h.
	* config.h: If EACCES is not defined, define it to EACCESS.
	* filesubr.c: Use EACCES not EACCESS.
	* config.h [__WATCOMC__]: Define _setmode and _cwait.
	Don't define HAVE_DIRENT_H.  Don't declare getpid.  Don't
	define NEED_DECOY_PERMISSIONS.  Don't define R_OK and friends.
	* os2inc.h: New file; includes os2.h but protected against
	multiple inclusion.
	* config.h: Include os2inc.h before defining sleep.
	* filesubr.c, getpass.c, popen.c, run.c: Include os2inc.h rather than
	trying to go through the right contortions to include os2.h
	ourselves.
	* popen.c (popen) [__WATCOMC__]: Use _hdopen together with fdopen.
	(popenRW): Change pid from PID to int.
	* tcpip.h [__WATCOMC__]: Work around errno value conflict